@@ -16,7 +16,7 @@ echo ===========================================================================
 cd $TRAVIS_BUILD_DIR
 mkdir -p build
 cd build
-cmake -DCMAKE_INSTALL_PREFIX=$INSTALL_LOCATION -DRAPIDASSIST_BUILD_TEST=ON -DBUILD_SHARED_LIBS=OFF ..
+cmake -DCMAKE_INSTALL_PREFIX=$INSTALL_LOCATION -DRAPIDASSIST_BUILD_TEST=ON -DRAPIDASSIST_BUILD_GTESTHELP=ON -DBUILD_SHARED_LIBS=OFF ..
 
 echo ============================================================================
 echo Compiling...
